add base and utils in folder sass

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,1 +1,7 @@
 @import './common';
+
+@import './utils/variables';
+@import './utils/visually-hidden';
+
+@import './base/common';
+@import './base/container';
