add html header, little css on 2 pages

--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -1,8 +1,8 @@
-// body {
-//   font-family: var(--primary-font-family);
-//   font-size: 12px;
-//   color: var(--primary-text-color);
-// }
+body {
+  font-family: var(--primary-font-family);
+  font-size: var(--primary-font-size);
+  color: var(--primary-text-color);
+}
 
 h1,
 h2,
