add gallery styles

--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -7,8 +7,8 @@
 }
 @media screen and (min-width: 768px) {
     width: 768px;
-    padding-left: 32px;
-    padding-right: 32px;
+    // padding-left: 32px;
+    // padding-right: 32px;
 }
 @media screen and (min-width: 1280px) {
     width: 1280px;
