fix pagin.reset, font-size input-search

--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -35,7 +35,6 @@
   }
 }
 
-
 @media screen and (min-width: 1280px) {
   .header {
     background-image:
@@ -211,6 +210,7 @@
   background-color: transparent;
   padding: 4px 0;
   width: 94vw;
+  font-size: 16px;
   border: .5px solid;
   border-color: transparent transparent #ffffff transparent;
   box-sizing: border-box;
