import styles in index.scss

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -9,5 +9,5 @@
 @import './layouts/header';
 @import './layouts/footer';
 @import './layouts/gallery';
-
+@import './layouts/loader';
 @import './layouts/modal';
