--- a/src/sass/layouts/_modal.scss
+++ b/src/sass/layouts/_modal.scss
@@ -4,16 +4,21 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-
+  opacity: 0;
   background-color: rgba(0, 0, 0, 0.2);
+  // visibility: hidden;
 }
 
 .is-hidden {
-  opacity: 0;
+  
   visibility: hidden;
   //   pointer-events: none;
 }
-
+.is-open {
+  opacity: 1;
+  // pointer-events: initial;
+  visibility: none;
+}
 .modal {
   position: absolute;
   width: 806px;
