--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -236,4 +236,33 @@
 .search__input:hover + .search__icon, .search__input:focus +.search__icon {
   fill: #FF001B;
 }
-
+.header_library .btn-watched, .header_library .btn-queue {
+   width: 129px;
+  background-color: transparent;
+  border-color: #ffffff;
+  color: #ffffff;
+   transition: transform 250ms var(--timing-fun);
+  &:hover, &:hover {
+    cursor: pointer;
+     transform: scale(1.1);
+  }
+  @media screen and (min-width:768px) {
+     width: 152px;
+  }
+  @media screen and (min-width:1280px) {
+     width: 148px;
+  }
+}
+.btn-watched {
+  margin-right: 19px;
+   @media screen and (min-width:768px) {
+     margin-right: 32px;
+  }
+  @media screen and (min-width:1280px) {
+     margin-right: 16px;
+  }
+}
+.header_library .current-btn_library {
+  background-color: var(--accent-color);
+  border-color: transparent;
+}
