--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -6,12 +6,12 @@
               class="modal-close-icon"
               width="14"
               height="14"
-              fill="none"
-              viewBox="0 0 24 24"
-            >
-              <path
+             >
+
+            <use href="./images/icons.svg#icon-modal-close"></use>
+              <!-- <path
                 d="M18.984 6.422l-5.578 5.578 5.578 5.578-1.406 1.406-5.578-5.578-5.578 5.578-1.406-1.406 5.578-5.578-5.578-5.578 1.406-1.406 5.578 5.578 5.578-5.578z"
-              ></path>
+              ></path> -->
             </svg>
           </button>
 
