--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -1,43 +1,43 @@
 .footer {
-    background-color: #f7f7f7;
-    padding: 29px 0;
+  background-color: #f7f7f7;
+  padding: 29px 0;
 }
 .footer__description {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-font-size: 14px;
-line-height: 1.14;
-color: #545454;
-text-align: center;
-@media screen and (min-width: 768px) {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  line-height: 1.14;
+  color: #545454;
+  text-align: center;
+  @media screen and (min-width: 768px) {
     flex-direction: row;
     font-size: 16px;
-line-height: 1.18;
-    
-}
+    line-height: 1.18;
+  }
 }
 .developers {
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-    padding-left: 3px;
-    @media screen and (max-width: 767px) {
-margin-top: 10px; 
-}
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  padding-left: 3px;
+  @media screen and (max-width: 767px) {
+    margin-top: 10px;
+  }
 }
 .developers_link {
-    color: #545454;
-    text-decoration: underline;
-    transition: color 250ms var(--timing-fun);
+  color: #545454;
+  text-decoration: underline;
+  transition: color 250ms var(--timing-fun);
 }
-.developers_link:hover, .developers_link:focus {
-    color: var(--accent-color);
+.developers_link:hover,
+.developers_link:focus {
+  color: var(--accent-color);
 }
 .footer__icon {
-    fill: var(--accent-color);
-     animation-name: spin;
+  fill: var(--accent-color);
+  animation-name: spin;
   animation-duration: 1s;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
