--- a/src/sass/layouts/_modal.scss
+++ b/src/sass/layouts/_modal.scss
@@ -59,10 +59,26 @@
 .modal-close-icon {
   width: 30px;
   height: 30px;
-  color: #000;
   fill: black;
   text-align: center;
   align-items: center;
+}
+
+.modal-close-icon:hover {
+  fill: #ff6b01;
+  animation-name: spin;
+  animation-duration: 1s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+@keyframes spin {
+  0% {
+    transform: scale(1.2);
+  }
+
+  100% {
+    transform: scale(1.8);
+  }
 }
 
 .modal-card {
