--- a/src/sass/layouts/_modal.scss
+++ b/src/sass/layouts/_modal.scss
@@ -179,7 +179,9 @@
   display: flex;
 }
 
-.modal-button, .btn-watched, .btn-queue {
+.modal-button,
+.btn-watched,
+.btn-queue {
   width: 136px;
   height: 44px;
   font-size: 12px;
