--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,23 +1,13 @@
 <div class="backdrop is-hidden" data-modal>
-      <div class="modal">
-        <div class="modal-container">
-          <button type="button" class="modal-close-button" data-modal-close>
-            <svg
-              class="modal-close-icon"
-              width="14"
-              height="14"
-             >
+  <div class="modal">
+    <div class="modal-container">
+      <button type="button" class="modal-close-button" data-modal-close>
+        <svg class="modal-close-icon" width="14" height="14">
+          <use href="./images/icons.svg#icon-modal-close"></use>
+        </svg>
+      </button>
 
-            <use href="./images/icons.svg#icon-modal-close"></use>
-              <!-- <path
-                d="M18.984 6.422l-5.578 5.578 5.578 5.578-1.406 1.406-5.578-5.578-5.578 5.578-1.406-1.406 5.578-5.578-5.578-5.578 1.406-1.406 5.578 5.578 5.578-5.578z"
-              ></path> -->
-            </svg>
-          </button>
-
-          <div class="modal-card">
-          </div>
-          </div>
-        </div>
-      </div>
+      <div class="modal-card"></div>
     </div>
+  </div>
+</div>
