--- a/src/sass/layouts/_modal.scss
+++ b/src/sass/layouts/_modal.scss
@@ -4,20 +4,23 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  opacity: 0;
+  opacity: 1;
   background-color: rgba(0, 0, 0, 0.2);
   // visibility: hidden;
 }
 
 .is-hidden {
+  opacity: 0;
   visibility: hidden;
-  //   pointer-events: none;
+  pointer-events: none;
 }
-.is-open {
-  opacity: 1;
-  // pointer-events: initial;
-  visibility: none;
-}
+
+// .is-open {
+//   opacity: 1;
+//   // pointer-events: initial;
+//   visibility: none;
+// }
+
 .modal {
   position: absolute;
   width: 806px;
@@ -102,7 +105,7 @@
   font-weight: 500;
   font-size: 30px;
   line-height: 1.16;
-  height: 31px;
+  min-height: 31px;
   margin-top: 0px;
   margin-bottom: 20px;
 }
