team modal js features

--- a/src/partials/team.html
+++ b/src/partials/team.html
@@ -1,4 +1,4 @@
-<div class="backdrop__team is-hidden" data-team>
+<div class="teamdrop visually-hidden" data-team>
   <div class="team__modal">
     <button class="modal-close-button" type="button" data-team-close>
       <svg
