--- a/src/sass/layouts/_gallery.scss
+++ b/src/sass/layouts/_gallery.scss
@@ -64,7 +64,7 @@
 }
 
 @media screen and (max-width: 767.98px) {
-    .gallery {
+    .gallery, .gallery__library-watched, .gallery__library-queue {
         padding-top: 20px;
         padding-bottom: 40px;
         }
@@ -94,7 +94,7 @@
 }
 
 @media screen and (min-width: 768px) {
-    .gallery {
+    .gallery, .gallery__library-watched, .gallery__library-queue {
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
@@ -128,7 +128,7 @@
 }
 
 @media screen and (min-width: 1280px) {
-    .gallery {
+    .gallery, .gallery__library-watched, .gallery__library-queue {
         flex-basis: calc((100% / 3) - 16px);
         margin-right: -16px;
         margin-bottom: -32px;
