--- a/src/partials/team.html
+++ b/src/partials/team.html
@@ -13,5 +13,75 @@
         ></path>
       </svg>
     </button>
+    <div class="team__container">
+      <p class="team__title">Our Team</p>
+      <div class="team__cards">
+        <ul class="team__list list">
+          <li class="team__card">
+            <img
+              class="team__image"
+              src="./images/team members/alyona1.jpg"
+              alt="team lead"
+            />
+            <p class="team__name">Alyona</p>
+            <p class="team__job">Team lead</p>
+          </li>
+          <li class="team__card">
+            <img
+              class="team__image"
+              src="./images/team members/alyona2.jpg"
+              alt="scrum master"
+            />
+            <p class="team__name">Alyona</p>
+            <p class="team__job">Scrum master</p>
+          </li>
+          <li class="team__card">
+            <img
+              class="team__image"
+              src="./images/team members/andrey.jpg"
+              alt="scrum master"
+            />
+            <p class="team__name">Andrey</p>
+            <p class="team__job">Developer</p>
+          </li>
+          <li class="team__card">
+            <img
+              class="team__image"
+              src="./images/team members/roman.jpg"
+              alt="scrum master"
+            />
+            <p class="team__name">Roman</p>
+            <p class="team__job">Developer</p>
+          </li>
+          <li class="team__card">
+            <img
+              class="team__image"
+              src="./images/team members/marina.jpg"
+              alt="scrum master"
+            />
+            <p class="team__name">Marina</p>
+            <p class="team__job">Developer</p>
+          </li>
+          <li class="team__card">
+            <img
+              class="team__image"
+              src="./images/team members/viktoriia.jpg"
+              alt="scrum master"
+            />
+            <p class="team__name">Viktoriia</p>
+            <p class="team__job">Developer</p>
+          </li>
+          <li class="team__card">
+            <img
+              class="team__image"
+              src="./images/team members/oleh.jpg"
+              alt="scrum master"
+            />
+            <p class="team__name">Oleh</p>
+            <p class="team__job">Developer</p>
+          </li>
+        </ul>
+      </div>
+    </div>
   </div>
 </div>
