--- a/src/sass/layouts/_ourteam.scss
+++ b/src/sass/layouts/_ourteam.scss
@@ -2,21 +2,22 @@
   visibility: hidden;
 }
 .teamdrop {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100vw;
   height: 100vh;
   opacity: 1;
   z-index: 10;
-  overflow-y: scroll;
   background-color: rgba(0, 0, 0, 0.2);
 }
 .team__modal {
   position: absolute;
   display: flex;
   background-attachment: fixed;
-  height: 730px;
+  height: 530px;
+  overflow-y: scroll;
+  overflow-x: hidden;
   width: 70%;
   left: 50%;
   top: 5%;
@@ -24,6 +25,11 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+@media screen and (min-width: 768px) {
+  .team__modal {
+    overflow: hidden;
+  }
 }
 .modal-close-button {
   position: absolute;
@@ -47,6 +53,23 @@
   fill: black;
   align-items: center;
 }
+.modal__icon:hover {
+  fill: #ff6b01;
+  animation-name: spin;
+  animation-duration: 1s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: scale(1.2);
+  }
+
+  100% {
+    transform: scale(1.8);
+  }
+}
 @media screen and (min-width: 767px) {
   .team__modal {
     width: 704px;
@@ -62,4 +85,98 @@
     height: 558px;
     padding: 40px 12px;
   }
+}
+// team cards
+.team__container {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+}
+.team__list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: -24px;
+  margin-top: -24px;
+  justify-content: center;
+  align-items: center;
+}
+.team__card {
+  width: 106px;
+  height: 151px;
+  background: rgba(174, 174, 174, 0.38);
+  box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
+  flex-basis: calc(320px / 2 - 48px);
+  margin-top: 24px;
+  margin-right: 24px;
+}
+  .team__card:last-child {
+    margin-bottom: 32px;
+  }
+@media screen and (min-width: 768px) {
+  .team__card {
+    width: calc((768px - 50px)  / 4);
+    margin-right: 32px;
+    margin-bottom: 32px;
+  }
+}
+@media screen and (min-width: 1279px) {
+  .team__card {
+    width: 126px;
+    height: 166px;
+  }
+}
+.team__title {
+  margin-top: 32px;
+  margin-bottom: 32px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+  
+  color: var(--primary-text-color);
+}
+@media screen and (min-width: 767px) {
+  .team__title {
+    font-size: 24px;
+    line-height: 28px;
+  }
+}
+@media screen and (min-width: 1279px) {
+  .team__title {
+    margin-top: 0px;
+    font-size: 30px;
+    line-height: 35px;
+  }
+}
+.team__image {
+  margin-top: 10px;
+  margin-right: auto;
+  margin-left: auto;
+  width: 86px;
+  height: 86px;
+  border-radius: 15px;
+}
+
+@media screen and (min-width: 1279px) {
+  .team__image {
+    width: 100px;
+    height: 100px;
+  }
+}
+.team__name {
+ margin-top: 10px;
+ font-weight: 500;
+ font-size: 12px;
+ line-height: 16px;
+ text-align: center;
+ text-transform: uppercase;
+ color: var(--primary-text-color);
+}
+.team__job {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 16px;
+  text-align: center;
+  color: #8c8c8c;
 }
