--- a/src/partials/upbutton.html
+++ b/src/partials/upbutton.html
@@ -1,4 +1,4 @@
-<a class="up-button-container" visuallyhidden title="up">
+<a class="up-button-container is-hidden" title="up">
   <svg class="up-button-icon">
     <use href="./images/icons.svg#icon-up"></use>
   </svg>
