--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -4,11 +4,15 @@
   padding-right: 20px;
 @media screen and (min-width: 320px) {
     width: 320px;
+    padding-top: 20px;
+    padding-bottom: 40px;
 }
 @media screen and (min-width: 768px) {
     width: 768px;
     // padding-left: 32px;
     // padding-right: 32px;
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 @media screen and (min-width: 1280px) {
     width: 1280px;
