--- a/src/sass/layouts/_modal.scss
+++ b/src/sass/layouts/_modal.scss
@@ -69,6 +69,7 @@
 
 .modal-close-icon:hover {
   fill: #ff6b01;
+  cursor: pointer;
   animation-name: spin;
   animation-duration: 1s;
   animation-timing-function: linear;
@@ -297,4 +298,6 @@
 .btn-disabled {
  background-color: var(--accent-color);
  color: var(--add-textcolor);
+ text-transform: uppercase;
+ border-color: #ffffff;
 }
