--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -32,3 +32,11 @@ img {
 .link {
   text-decoration: none;
 }
+.main-section {
+    padding-top: 20px;
+    padding-bottom: 40px;
+@media screen and (min-width: 768px) {
+    padding-top: 60px;
+    padding-bottom: 60px;
+}
+}
