--- a/src/sass/utils/_visually-hidden.scss
+++ b/src/sass/utils/_visually-hidden.scss
@@ -1,12 +1,37 @@
 .visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
-  }
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.is-hidden {
+  display: none;
+}
+
+.load-more {
+  margin: 0 auto;
+  margin-top: 60px;
+  display: block;
+  width: 200px;
+  height: 50px;
+  font-size: 18px;
+  line-height: 1.33;
+  text-align: center;
+  border-radius: 5px;
+  border-width: 1px;
+  border-color: transparent;
+  background-color: #ff6b01;
+  color: #ffffff;
+}
+
+.load-more:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+}
