--- a/src/sass/layouts/_gallery.scss
+++ b/src/sass/layouts/_gallery.scss
@@ -147,11 +147,15 @@
         height: 574px;
     }
 
-    .gallery__item-title, .gallery__item-text, .empty-library-watched {
+    .gallery__item-title, .gallery__item-text {
         font-size: 20px;
         line-height: 1.20;
     }
-
+    .empty-library-watched {
+        margin-bottom: 20px;
+        font-size: 40px;
+        line-height: 1.20;
+    }
     .gallery__item-rating {
         width: 40px;
         height: 20px;
