--- a/src/sass/layouts/_modal.scss
+++ b/src/sass/layouts/_modal.scss
@@ -39,7 +39,7 @@
 }
 
 .modal-container {
-  margin: 40px 0px;
+  // margin: 40px 0px;
   padding: 0px 12px;
 }
 
@@ -90,7 +90,7 @@
 }
 
 .modal-card-poster {
-  width: 375px;
+  // width: 375px;
   // width: 100%;
   height: 478px;
   border-radius: 10px;
@@ -186,6 +186,12 @@
   display: flex;
 }
 
+.btn-disabled {
+  background-color: var(--accent-color);
+  color: var(--add-textcolor);
+  text-transform: uppercase;
+  border-color: #ffffff;
+ }
 .modal-button,
 .btn-watched,
 .btn-queue {
@@ -219,18 +225,34 @@
   transform: scale(1.1);
 }
 
+
+
 /* max 767px */
 
 @media screen and (max-width: 767px) {
   .modal {
     position: absolute;
+    overflow-y: scroll;
+    overflow-x: hidden;
     width: 280px;
-    height: 940px;
+    height: 670px;
   }
 
   .modal-container {
-    padding: 0px 20px;
-    margin-top: 48px;
+    overflow-x: auto;
+    position: relative;
+    margin: auto;
+    background-color: #fff;
+    font-family: Roboto,sans-serif;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.33333;
+    color: #000;
+    max-height: 100vh;
+    width: 280px;
+    padding: 48px 20px 40px;
+
+
   }
   .modal-card {
     flex-wrap: wrap;
@@ -269,8 +291,12 @@
   }
 
   .modal-container {
-    padding-right: 72px;
-    padding-left: 36px;
+    width: 100%;
+    height: 100%;
+    font-weight: 500;
+    padding: 40px 72px 40px 36px;
+    // padding-right: 72px;
+    // padding-left: 36px;
   }
 
   .modal-card-poster {
@@ -294,10 +320,31 @@
   .modal-button {
     width: 125px;
   }
+  .modal-button-wrap {
+    position: absolute;
+    bottom: 40px;
+  }
+
 }
-.btn-disabled {
- background-color: var(--accent-color);
- color: var(--add-textcolor);
- text-transform: uppercase;
- border-color: #ffffff;
+
+@media screen and (min-width: 1280px) {
+  .modal-container {
+    width: 100%;
+    height: 100%;
+    font-weight: 500;
+    padding: 40px 12px;
+    // padding-right: 72px;
+    // padding-left: 36px;
+  }
+  .modal-button-wrap {
+    display: flex;
+    align-items: center;
+  }
+  .modal-movie-info-part {
+    padding-left: 16px;
+  }
+  // .modal-card-poster {
+  //   width: 375px;
+  //   // height: 478px;
+  // }
 }
