load-more-update
подправил отображение и удаление кнопки

--- a/src/sass/utils/_visually-hidden.scss
+++ b/src/sass/utils/_visually-hidden.scss
@@ -18,7 +18,8 @@
 .load-more {
   margin: 0 auto;
   margin-top: 60px;
-  display: block;
+  display: none;
+  align-items: center;
   width: 200px;
   height: 50px;
   font-size: 18px;
