--- a/src/sass/layouts/_changetheme.scss
+++ b/src/sass/layouts/_changetheme.scss
@@ -36,6 +36,11 @@
   height: 50px;
   border-radius: 50px;
   background-color: rgba(255, 107, 1, 0.1);
+  transition: all 0.3s ease-in-out 0s;
+  &:hover {
+    cursor: pointer;
+    transform: scale(1.1);
+  }
 }
 
 .light-theme-icon {
