--- a/src/partials/team.html
+++ b/src/partials/team.html
@@ -20,7 +20,7 @@
           <li class="team__card">
             <img
               class="team__image"
-              src="./images/team members/alyona1.jpg"
+              src="./images/team-members/alyona1.jpg"
               alt="team lead"
             />
             <p class="team__name">Alyona</p>
@@ -45,7 +45,7 @@
           <li class="team__card">
             <img
               class="team__image"
-              src="./images/team members/alyona2.jpg"
+              src="./images/team-members/alyona2.jpg"
               alt="scrum master"
             />
             <p class="team__name">Alyona</p>
@@ -70,7 +70,7 @@
           <li class="team__card">
             <img
               class="team__image"
-              src="./images/team members/andrey.jpg"
+              src="./images/team-members/andrey.jpg"
               alt="scrum master"
             />
             <p class="team__name">Andrey</p>
@@ -95,7 +95,7 @@
           <li class="team__card">
             <img
               class="team__image"
-              src="./images/team members/roman.jpg"
+              src="./images/team-members/roman.jpg"
               alt="scrum master"
             />
             <p class="team__name">Roman</p>
@@ -122,7 +122,7 @@
           <li class="team__card">
             <img
               class="team__image"
-              src="./images/team members/marina.jpg"
+              src="./images/team-members/marina.jpg"
               alt="scrum master"
             />
             <p class="team__name">Marina</p>
@@ -147,7 +147,7 @@
           <li class="team__card">
             <img
               class="team__image"
-              src="./images/team members/viktoriia.jpg"
+              src="./images/team-members/viktoriia.jpg"
               alt="scrum master"
             />
             <p class="team__name">Viktoriia</p>
@@ -174,7 +174,7 @@
           <li class="team__card">
             <img
               class="team__image"
-              src="./images/team members/oleh.jpg"
+              src="./images/team-members/oleh.jpg"
               alt="scrum master"
             />
             <p class="team__name">Oleh</p>
